--- a/Project/css/basic_style.css
+++ b/Project/css/basic_style.css
@@ -31,3 +31,6 @@ h1 {
     cursor: pointer;
 }
 
+/* ------------------------
+    SELECT ALL SQUARES PARAGRAPHS IN THE ARRAY
+    ------------------------------------- */
